--- a/src/app/components/landing-page/misc/header/header.component.scss
+++ b/src/app/components/landing-page/misc/header/header.component.scss
@@ -9,6 +9,7 @@
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 99;
   color: #fff;
+  overflow: visible;
   .inner-container {
     .header-grid {
       display: grid;
