--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,87 +1,87 @@
-@import 'variables';
-@import 'mixins';
+@import "variables";
+@import "mixins";
 
 /* You can add global styles to this file, and also import other style files */
 html,
 body {
-	height: 100%;
-	box-sizing: border-box;
-	font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px;
-	// overflow: hidden; //attepmpt to hide scrollbar
+  height: 100%;
+  box-sizing: border-box;
+  font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px;
+  // overflow: hidden; //attepmpt to hide scrollbar
 
-	@include lg {
-		font-size: 50%;
-	}
+  @include lg {
+    font-size: 50%;
+  }
 
-	/* Hide scrollbar for IE, Edge add Firefox */
-	-ms-overflow-style: none;
-	scrollbar-width: none;
-	/* Firefox */
+  /* Hide scrollbar for IE, Edge add Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  /* Firefox */
 
-	/* Hide scrollbar for Chrome, Safari and Opera */
-	::-webkit-scrollbar {
-		display: none;
-	}
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 *,
 *::before,
 *::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 body {
-	margin: 0;
-	font-family: Poppins, 'Helvetica Neue', sans-serif;
-	color: $--black;
-	background-color: $--black;
+  margin: 0;
+  font-family: Poppins, "Helvetica Neue", sans-serif;
+  color: $--black;
+  background-color: $--black;
 }
 
 mat-dialog-container#modal-component {
-	border: 3px solid $--black;
-	border-radius: 1.1rem;
-	background-color: $--black;
+  border: 3px solid $--black;
+  border-radius: 1.1rem;
+  background-color: $--black;
 }
 
 .container {
-	position: relative;
-	text-align: center;
-	width: 100%;
-	overflow: hidden;
-	// padding: 15px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  overflow: hidden;
+  // padding: 15px;
 
-	.inner-container {
-		display: inline-block;
-		width: 100%;
-		max-width: 120rem;
-		margin: 0 auto;
-		text-align: left;
-		//does not show overlapping images
-	}
+  .inner-container {
+    display: inline-block;
+    width: 100%;
+    max-width: 120rem;
+    margin: 0 auto;
+    text-align: left;
+    //does not show overlapping images
+  }
 
-	.feature-container {
-		display: flex;
-		flex-direction: column;
-		gap: 10rem;
-		justify-content: space-evenly;
-		align-items: center;
+  .feature-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+    justify-content: space-evenly;
+    align-items: center;
 
-		@include md {
-			width: 100%;
-		}
-	}
+    @include md {
+      width: 100%;
+    }
+  }
 }
 
 /* Hide scrollbar for IE, Edge add Firefox */
 .hide-scroll {
-	-ms-overflow-style: none;
-	scrollbar-width: none;
-	/* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  /* Firefox */
 
-	/* Hide scrollbar for Chrome, Safari and Opera */
-	::-webkit-scrollbar {
-		display: none;
-	}
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
